update search input

--- a/src/app/components/shared/pagination/pagination.component.html
+++ b/src/app/components/shared/pagination/pagination.component.html
@@ -1,11 +1,19 @@
 <div class="flex justify-content-between">
     <div class="input-icon-wrap blue">
-        <span class="input-icon"><span class="fa fa-solid fa-angle-left"></span></span>
-        <button [disabled]="disabled" type="button" class="input-with-icon" (click)="back()">Atras</button>
+        <button [disabled]="disabled || cantidadPaginas() == 0" type="button" class="input-with-icon" (click)="back()">
+          <span class="input-icon"><span class="fa fa-solid fa-angle-left"></span></span>
+          Atras
+        </button>
+    </div>
+
+    <div class="center">
+      <label>Total de Registros: {{ resource.count_rows }}, Total de paginas: {{ cantidadPaginas() }}, Pagina actual: {{ resource.page_number }}</label>
     </div>
 
     <div class="input-icon-wrap blue">
-        <button [disabled]="disabled" type="button" (click)="next()">Siguiente</button>
-        <span class="input-icon"><span class="fa fa-solid fa-angle-right"></span></span>
+        <button [disabled]="disabled || cantidadPaginas() == 0" type="button" (click)="next()">
+          Siguiente
+          <span class="input-icon"><span class="fa fa-solid fa-angle-right"></span></span>
+        </button>
     </div>
 </div>
