--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -7,57 +7,60 @@
       (keyup)="onKeyUpSearch($event)">
     <span class="input-icon"><span class="fa fa-close" (click)="searchAll()"></span></span>
   </div>
-
 </div>
 
-<div class="flex" *ngIf="pokemonList">
-  <div class="f-col-8" *ngIf="pokemonList.length > 0">
-    <div class="row">
-      <div *ngFor="let item of pokemonList;" class="card f-col-2" (click)="selectPokemon(item)">
-        <img class="center" [src]="item.sprites?.front_default" width="120" height="120">
-        <div># {{item.id}}</div>
-        <div>{{item.name | titlecase }}</div>
-      </div>
-    </div>
-  </div>
-
-  <div class="f-col-4" *ngIf="pokemonSelected">
-    <div class="card card-selected">
-      <a href="#" class="close" (click)="unselectPokemon()"></a>
-      <img class="center" [src]="pokemonSelected.sprites?.front_default" width="250" height="250">
-      <h2 class="center"># {{pokemonSelected.id}}</h2>
-      <h2 class="center">{{pokemonSelected.name | titlecase }}</h2>
-
-      <h2>Types</h2>
-      <div>{{ getTypes(pokemonSelected.types) }}</div>
-
-      <h2>Peso</h2>
-      <div>{{pokemonSelected.weight}}kg</div>
-
-      <h2>Sprites</h2>
-      <div class="row" *ngIf="pokemonSelected.sprites; let sprite;">
-        <img *ngIf="sprite.back_default" class="f-col center" [src]="sprite.back_default" width="20" height="20">
-        <img *ngIf="sprite.back_female" class="f-col center" [src]="sprite.back_female" width="20" height="20">
-        <img *ngIf="sprite.back_shiny" class="f-col center" [src]="sprite.back_shiny" width="20" height="20">
-        <img *ngIf="sprite.back_shiny_female" class="f-col center" [src]="sprite.back_shiny_female" width="20"
-          height="20">
-        <img *ngIf="sprite.front_default" class="f-col center" [src]="sprite.front_default" width="20" height="20">
-        <img *ngIf="sprite.front_female" class="f-col center" [src]="sprite.front_female" width="20" height="20">
-        <img *ngIf="sprite.front_shiny" class="f-col center" [src]="sprite.front_shiny" width="20" height="20">
-        <img *ngIf="sprite.front_shiny_female" class="f-col center" [src]="sprite.front_shiny_female" width="20"
-          height="20">
-      </div>
-
-      <h2>Movimientos</h2>
-      <div>{{ getMoves(pokemonSelected.moves) }}</div>
-    </div>
-  </div>
-
-</div>
 
 <div class="row justify-content-center" *ngIf="loadingData">
   <img src="assets/Spin-1s-200px.gif" width="100" height="100" />
 </div>
 
-<app-pagination [initialPage]="initialPage" [disabled]="loadingData" (changePage)="onChangePage($event)">
-</app-pagination>
+
+<div *ngIf="pokemonList && !loadingData">
+  <div class="flex">
+    <div class="f-col-9" *ngIf="pokemonList.length > 0">
+      <div class="row">
+        <div *ngFor="let item of pokemonList;" class="card f-col-2" (click)="selectPokemon(item)">
+          <img class="center" [src]="item.sprites?.front_default" width="120" height="120">
+          <div># {{item.id}}</div>
+          <div>{{item.name | titlecase }}</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="f-col-3" *ngIf="pokemonSelected">
+      <div class="card card-selected">
+        <a href="#" class="close" (click)="unselectPokemon()"></a>
+        <div class="center">
+          <img [src]="pokemonSelected.sprites?.front_default" width="200" height="200">
+        </div>
+        <h4 class="center"># {{pokemonSelected.id}}</h4>
+        <h4 class="center">{{pokemonSelected.name | titlecase }}</h4>
+
+        <h4>Types</h4>
+        <div>{{ getTypes(pokemonSelected.types) }}</div>
+
+        <h4>Peso</h4>
+        <div>{{pokemonSelected.weight}}kg</div>
+
+        <h4>Sprites</h4>
+        <div class="row" *ngIf="pokemonSelected.sprites; let sprite;">
+          <img *ngIf="sprite.back_default" class="f-col center" [src]="sprite.back_default" width="40" height="40">
+          <img *ngIf="sprite.back_female" class="f-col center" [src]="sprite.back_female" width="40" height="40">
+          <img *ngIf="sprite.back_shiny" class="f-col center" [src]="sprite.back_shiny" width="40" height="40">
+          <img *ngIf="sprite.back_shiny_female" class="f-col center" [src]="sprite.back_shiny_female" width="40" height="40">
+          <img *ngIf="sprite.front_default" class="f-col center" [src]="sprite.front_default" width="40" height="40">
+          <img *ngIf="sprite.front_female" class="f-col center" [src]="sprite.front_female" width="40" height="40">
+          <img *ngIf="sprite.front_shiny" class="f-col center" [src]="sprite.front_shiny" width="40" height="40">
+          <img *ngIf="sprite.front_shiny_female" class="f-col center" [src]="sprite.front_shiny_female" width="40" height="40">
+        </div>
+
+        <h4>Movimientos</h4>
+        <div>{{ getMoves(pokemonSelected.moves) }}</div>
+      </div>
+    </div>
+  </div>
+
+  <app-pagination [resource]="pagingResource" [disabled]="loadingData"
+    (changePage)="onChangePage($event)">
+  </app-pagination>
+</div>
