--- a/src/styles.css
+++ b/src/styles.css
@@ -11,14 +11,25 @@
 body, h1 {
   font-size: 14px;
 }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: inherit;
+}
+
 html, body, h1, input, select {
   font-family: arial,sans-serif;
 }
 
 .container {
-  width: calc(100% - 15px);
-  margin-right: 15px;
-  margin-left: 15px;
+  max-width: 80%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .row {
@@ -133,8 +144,8 @@ html, body, h1, input, select {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-  margin: 0.5rem !important;
-  padding: 0.25rem !important;
+  margin: 0.25rem !important;
+  padding: 0.35rem !important;
   vertical-align: middle;
 }
 
@@ -171,7 +182,7 @@ input:focus {
 }
 
 .input-icon-wrap {
-  border: 1px solid #ddd;    
+  border: 1px solid #ddd;
   display: flex;
   flex-direction: row;
 }
@@ -226,7 +237,7 @@ button {
   -ms-user-select: none;
 }
 
-button:disabled {
+:disabled {
   background-color: #7c7c7c;
 }
 
@@ -238,7 +249,7 @@ button:disabled {
 }
 
 .center {
-  margin: 4px auto;
+  margin: 0 auto;
   display: block;
 }
 
